# seite

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MANUAL_TESTING.md  README.md  SECURITY.md  build.rs  codecov.yml  deny.toml  install.ps1  install.sh  local-install.sh  plan.md
.claude/: settings.local.json
.github/: SECURITY_SETUP.md  dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  deploy-docs.yml  release-tag.yml  release.yml  rust.yml  scorecard.yml
bench/: .gitignore  RESEARCH-ssg-benchmarks.md  RESULTS.md  profile.sh  run-comparison.sh  run.sh
bench/skeletons/astro/: package.json
bench/skeletons/astro/src/: content.config.ts
bench/skeletons/astro/src/pages/: index.astro
bench/skeletons/astro/src/pages/posts/: [...slug].astro
bench/skeletons/eleventy/: .eleventy.js  package.json
bench/skeletons/eleventy/_includes/: post.njk
bench/skeletons/hugo/: hugo.toml
bench/skeletons/hugo/layouts/_default/: list.html  single.html
bench/skeletons/jekyll/: Gemfile  _config.yml  index.html
bench/skeletons/jekyll/_layouts/: default.html  post.html
bench/skeletons/seite/: seite.toml
bench/skeletons/zola/: config.toml
bench/skeletons/zola/templates/: index.html  page.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: shortcode_parser.rs
hooks/: pre-commit
research/: seo-geo-best-practices-2026.md
scripts/: generate-release-docs.sh  prepare-release.sh
seite-sh/: CLAUDE.md  seite.toml
seite-sh/.claude/: settings.json
seite-sh/.claude/skills/landing-page/: SKILL.md
seite-sh/.claude/skills/theme-builder/: SKILL.md
seite-sh/.github/workflows/: deploy.yml
seite-sh/content/changelog/: 2026-02-24-v0-2-1.md  2026-02-24-v0-2-2.md  2026-02-25-v0-2-3.md  2026-02-25-v0-2-4.md  2026-02-25-v0-3-0.md  2026-02-26-v0-3-0.md  2026-02-26-v0-3-1.md  2026-02-27-v0-3-2.md  2026-02-27-v0-3-3.md  2026-02-27-v0-4-0.md  2026-02-27-v0-4-1.md  2026-02-27-v0-4-2.md  2026-02-27-v0-4-3.md  2026-02-28-v0-4-4.md
seite-sh/content/docs/: agent.md  cli-reference.md  collections.md  configuration.md  contact-forms.md  custom-themes.md  deployment.md  getting-started.md  i18n.md  mcp-server.md  releases.md  shortcodes.md  templates.md  theme-gallery.md  trust-center.md  workspace.md
seite-sh/content/pages/: about.md  index.md
seite-sh/content/roadmap/: avif-image-format.md  custom-taxonomies.md  deploy-history-and-rollback.md  environment-aware-builds.md  math-and-latex-rendering.md  s3-hosting-target.md  subdomain-deploys.md  theme-community-ecosystem.md
seite-sh/data/: brand.yaml  footer.yaml  nav.yaml
seite-sh/static/: install.ps1  install.sh
seite-sh/templates/: base.html  doc.html  index.html  page.html
site/: CLAUDE.md  page.toml  seite.toml
site/.claude/: settings.json
site/.github/workflows/: deploy.yml
site/content/changelog/: 2026-02-20-v0-1-0.md
site/content/docs/: agent.md  cli-reference.md  collections.md  configuration.md  deployment.md  getting-started.md  i18n.md  releases.md  shortcodes.md  templates.md  theme-gallery.md  trust-center.md  workspace.md
site/content/pages/: about.md  index.md
site/content/posts/: 2026-02-18-introducing-page.md
site/content/roadmap/: deploy-history-and-rollback.md  external-data-sources.md  incremental-builds.md  multi-llm-agent-integration.md  subdomain-deploys.md
site/data/: footer.yaml
site/static/: install.sh
site/templates/: base.html  changelog-entry.html  changelog-index.html  doc.html  index.html  page.html  post.html  roadmap-index.html  roadmap-item.html
src/: credential.rs  docs.rs  error.rs  lib.rs  main.rs  meta.rs  platform.rs  themes.rs  update_check.rs
src/ai/: mod.rs
src/cli/: agent.rs  ai.rs  auth.rs  build.rs  collection.rs  contact.rs  deploy.rs  init.rs  mcp.rs  mod.rs  new.rs  self_update.rs  serve.rs  theme.rs  upgrade.rs  workspace.rs
src/config/: defaults.rs  mod.rs
src/content/: mod.rs
src/data/: mod.rs
src/deploy/: mod.rs
src/docs/: agent.md  cli-reference.md  deployment.md  getting-started.md  i18n.md  mcp-server.md  templates.md  theme-gallery.md  workspace.md
src/mcp/: mod.rs  resources.rs  tools.rs
src/output/: human.rs  json.rs  mod.rs
src/scaffold/: brand-identity.md  config-reference.md  contact-form.md  data-files.md  design-prompts.md  features.md  homepage-builder.md  i18n.md  mcp.md  repl.md  seo-requirements.md  shortcodes.md  skill-brand-identity.md  skill-homepage.md  skill-landing-page.md  skill-theme-builder.md  templates.md  theme-builder.md
src/server/: mod.rs
src/shortcodes/: builtins.rs  mod.rs  parser.rs
src/shortcodes/builtins/: callout.html  contact_form.html  figure.html  gist.html  vimeo.html  youtube.html
src/templates/: mod.rs
src/themes/: academic.tera  bento.tera  brutalist.tera  dark.tera  default.tera  docs.tera  landing.tera  magazine.tera  minimal.tera  terminal.tera
src/workspace/: build.rs  deploy.rs  mod.rs  server.rs
tests/: install.sh  integration.rs
