[package]
name = "page"
version = "0.1.0"
edition = "2021"
description = "AI-native static site generator — every page ships as HTML, markdown, and structured data"
license = "MIT"
repository = "https://github.com/sanchezomar/page"
homepage = "https://pagecli.dev"
keywords = ["static-site-generator", "ssg", "markdown", "llm", "ai"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.75"
readme = "README.md"

[[bin]]
name = "page"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
serde_yaml_ng = "0.10"

# Content processing
pulldown-cmark = "0.13"
syntect = "5"

# Templating
tera = "1.20"

# Web server
tiny_http = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2"
notify = "7"
fs_extra = "1.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RSS / Sitemap generation
quick-xml = { version = "0.37", features = ["serialize"] }

# Slug generation
slug = "0.1"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# HTTP client (for Cloudflare API and self-update)
ureq = { version = "2", features = ["json"] }

# Temp files (for self-update checksum verification)
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
